# Clinic-App

./: Cargo.toml  LICENSE  database.sqlite
migrations/2026-03-27-114226-0000_clinic_db/: down.sql  up.sql
migrations/2026-04-08-140540-0000_add_role_to_employees/: down.sql  up.sql
migrations/2026-04-08-144953-0000_add_email_to_employees/: down.sql  up.sql
src/: db_test.rs  lib.rs  main.rs  models.rs  schema.rs  theme.rs
src/components/: mod.rs  sidebar.rs
src/components/shared/: mod.rs
src/database/: models.rs  operations.rs  schema.rs
src/views/: employees.rs  mod.rs
